k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cayo-next-service
spec:
  selector:
    app: cayo-next
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
