k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cayo-next-route
spec:
  to:
    kind: Service
    name: cayo-next-service
